--- a/common/data/src/main/res/values/strings.xml
+++ b/common/data/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">network</string>
+    <string name="search_movie">Search a movie</string>
 
 
 </resources>
